--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     </head>
     <body>
         <h1>Cell Counter</h1>
+        <div id="tools">
+          Count:  <span id="cellCount">0</span>
+        </div>
         <div id="mainCanvasContainer">
             <canvas id="mainCanvas"></canvas>
         </div>
