manual removing markings + drag and drop in Chrome working

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div id="mainCanvasContainer">
     <canvas id="mainCanvas">
     </canvas>
-    <div id="markings"></div>
+    <div dropzone="true" id="markings"></div>
 </div>
 </body>
 </html>
