--- a/index.html
+++ b/index.html
@@ -19,12 +19,25 @@
 <h1>Cell Counter</h1>
 
 <div id="tools">
-    Count: <span id="cellCount">0</span>
+    <div>
+        Count: <span id="cellCount">0</span>
+    </div>
+    <div>
+        <label for="threshold">Threshold:</label>
+        <input id="threshold" type="range" min="0" max="255" value="150">
+
+        <label for="fadeThresholdImage">Fade Threshold Image:</label>
+        <input id="fadeThresholdImage" type="range" min="0" max="255" value="128">
+
+    </div>
 </div>
+
 <div id="mainCanvasContainer">
-    <canvas id="mainCanvas">
-    </canvas>
-    <div dropzone="true" id="markings"></div>
+    <div id="mainCanvasContainer2">
+        <canvas id="mainCanvas"></canvas>
+        <canvas id="filteredCanvas"></canvas>
+        <div dropzone="true" id="markings"></div>
+    </div>
 </div>
 </body>
 </html>
