added 2 types of markings

--- a/index.html
+++ b/index.html
@@ -19,17 +19,30 @@
 <h1>Cell Counter</h1>
 
 <div id="tools">
+    
+    <div class="toolsSection">
     <div>
-        Count: <span id="cellCount">0</span>
+        <input id="redMarking" type="radio" name="markingColor" value="0" checked="checked">
+        <label for="redMarking">Count: <span id="cellCount0">0</span></label>
     </div>
     <div>
-        <label for="threshold">Threshold:</label>
+        <input id="yellowMarking" type="radio" name="markingColor" value="1">
+        <label for="yellowMarking">Count: <span id="cellCount1">0</span></label>
+    </div>
+    </div>
+
+    <div class="toolsSection">
+        <button id="removeAllMarkings">Remove All Markings</button>
+    </div>
+
+    <div class="toolsSection">
+        <label for="threshold" class="range">Threshold:</label>
         <input id="threshold" type="range" min="0" max="255" value="150">
 
-        <label for="fadeThresholdImage">Fade Threshold Image:</label>
+        <label for="fadeThresholdImage" class="range">Fade Threshold Image:</label>
         <input id="fadeThresholdImage" type="range" min="0" max="255" value="128">
-
     </div>
+
 </div>
 
 <div id="mainCanvasContainer">
