added slow and ugly gaussian filter

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 
         <label for="fadeThresholdImage" class="range">Fade Threshold Image:</label>
         <input id="fadeThresholdImage" type="range" min="0" max="255" value="128">
+
+        <button id="filterButton">Filter</button>
     </div>
 
 </div>
