--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Canvas</title>
     <script type="text/javascript" src="libs/prototype.js"></script>
     <script type="text/javascript" src="libs/jquery.js"></script>
+    <script type="text/javascript" src="libs/jquery.tools.min.js"></script>
     <script type="text/javascript" src="libs/underscore.js"></script>
     <script type="text/javascript" src="libs/common.js"></script>
     <script type="text/javascript" src="js/filters.js"></script>
@@ -13,22 +14,24 @@
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <style type="text/css"></style>
     <script type="text/javascript">
+        jq(function () {
+        });
     </script>
 </head>
 <body>
 <h1>Cell Counter</h1>
 
 <div id="tools">
-    
+
     <div class="toolsSection">
-    <div>
-        <input id="redMarking" type="radio" name="markingColor" value="0" checked="checked">
-        <label for="redMarking">Count: <span id="cellCount0">0</span></label>
-    </div>
-    <div>
-        <input id="yellowMarking" type="radio" name="markingColor" value="1">
-        <label for="yellowMarking">Count: <span id="cellCount1">0</span></label>
-    </div>
+        <div>
+            <input id="redMarking" type="radio" name="markingColor" value="0" checked="checked">
+            <label for="redMarking">Count: <span id="cellCount0">0</span></label>
+        </div>
+        <div>
+            <input id="yellowMarking" type="radio" name="markingColor" value="1">
+            <label for="yellowMarking">Count: <span id="cellCount1">0</span></label>
+        </div>
     </div>
 
     <div class="toolsSection">
@@ -36,13 +39,17 @@
     </div>
 
     <div class="toolsSection">
-        <label for="threshold" class="range">Threshold:</label>
-        <input id="threshold" type="range" min="0" max="255" value="150">
+        <label for="threshold" class="rangeLabel">Threshold:</label>
+        <input id="threshold" type="range" min="0" max="255" value="255">
 
-        <label for="fadeThresholdImage" class="range">Fade Threshold Image:</label>
+        <label for="fadeThresholdImage" class="rangeLabel">Fade Threshold Image:</label>
         <input id="fadeThresholdImage" type="range" min="0" max="255" value="128">
 
+    </div>
+
+    <div class="toolsSection">
         <button id="filterButton">Filter</button>
+
     </div>
 
 </div>
