--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Canvas</title>
-    <script type="text/javascript" src="libs/prototype.js"></script>
     <script type="text/javascript" src="libs/jquery.js"></script>
     <script type="text/javascript" src="libs/jquery.tools.min.js"></script>
     <script type="text/javascript" src="libs/underscore.js"></script>
@@ -19,7 +18,7 @@
     </script>
 </head>
 <body>
-<h1>Cell Counter</h1>
+<h1>Marco's Cell Counter</h1>
 
 <div id="tools">
 
@@ -36,6 +35,8 @@
 
     <div class="toolsSection">
         <button id="removeAllMarkings">Remove All Markings</button>
+        <label for="markingsSize" class="rangeLabel">Markings Size:</label>
+        <input id="markingsSize" type="range" min="0" max="20" value="5">
     </div>
 
     <div class="toolsSection">
