--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="libs/jquery.tools.min.js"></script>
     <script type="text/javascript" src="libs/underscore.js"></script>
     <script type="text/javascript" src="libs/common.js"></script>
+    <script type="text/javascript" src="js/utils.js"></script>
     <script type="text/javascript" src="js/filters.js"></script>
     <script type="text/javascript" src="js/filters-fast.js"></script>
     <script type="text/javascript" src="js/cell-counter.js"></script>
@@ -36,7 +37,7 @@
     <div class="toolsSection">
         <button id="removeAllMarkings">Remove All Markings</button>
         <label for="markingsSize" class="rangeLabel">Markings Size:</label>
-        <input id="markingsSize" type="range" min="0" max="20" value="5">
+        <input id="markingsSize" type="range" min="0" max="20" value="9">
     </div>
 
     <div class="toolsSection">
