--- a/index.html
+++ b/index.html
@@ -2,21 +2,9 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Canvas</title>
-    <script type="text/javascript" src="libs/jquery.js"></script>
-    <script type="text/javascript" src="libs/jquery.tools.min.js"></script>
-    <script type="text/javascript" src="libs/underscore.js"></script>
-    <script type="text/javascript" src="libs/common.js"></script>
-    <script type="text/javascript" src="js/utils.js"></script>
-    <script type="text/javascript" src="js/filters.js"></script>
-    <script type="text/javascript" src="js/filters-fast.js"></script>
-    <script type="text/javascript" src="js/cell-counter.js"></script>
+    <title>Marco's Cell Counter</title>
+    <script type="text/javascript" src="js/cell-counter-with-libs.min.js"></script>
     <link type="text/css" rel="stylesheet" href="css/style.css">
-    <style type="text/css"></style>
-    <script type="text/javascript">
-        jq(function () {
-        });
-    </script>
 </head>
 <body>
 <h1>Marco's Cell Counter</h1>
