--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="manifest.appcache">
 <head>
     <meta charset="UTF-8">
     <title>Marco's Cell Counter</title>
