Multiple Markings, Image Crop and Filters

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
 <h1>Marco's Cell Counter</h1>
 
+<div id="menu">
+    <a href="#configure">Configure</a>
+</div>
+
 <div id="tools">
 
     <div class="toolsSection">
@@ -46,6 +50,7 @@
 
 <div id="mainCanvasContainer">
     <input id="openFile" type="file" value="Open Image" title="Open Image File"/>
+    <noscript>Please enable JavaScript.</noscript>
     <div id="mainCanvasContainer2">
         <canvas id="mainCanvas">
             Your browser is too old to run this application. Please use a newer browser.
