Add first version of AutoCount

--- a/index-dev.html
+++ b/index-dev.html
@@ -48,6 +48,7 @@
     </div>
 
     <div class="toolsSection">
+        <button id="autoCountButton">Count Automatically</button>
         <button id="filterButton">Filter</button>
     </div>
 
