--- a/mtests/filters/filters.html
+++ b/mtests/filters/filters.html
@@ -9,6 +9,11 @@
     <script type="text/javascript" src="../../js/filters.js"></script>
     <script type="text/javascript" src="../../js/filters-fast.js"></script>
     <script type="text/javascript" src="filters-mtest.js"></script>
+    <style type="text/css">
+        canvas {
+            min-width: 100px;
+        }
+    </style>
 </head>
 <body>
 <h1>Filter Test</h1>
