--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link type="text/css" rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<h1>Marco's Cell Counter v0.8.1</h1>
+<h1>Marco's Cell Counter v0.8.2</h1>
 
 <div id="menu">
+    <a href="#" id="restoreSavedCroppingLink" style="display: none;">Restore Saved Cropping</a>
     <a href="#" id="restoreOriginalImageLink" style="display: none;">Restore Original Image</a>
     <a href="#" id="cropImageLink" >Crop Image</a>
     <a href="#" id="configureLink" rel="#configureDialog">Settings</a>
