Added progress display

--- a/index-dev.html
+++ b/index-dev.html
@@ -61,7 +61,7 @@
             <option value="whiteOnBlue">White On Blue</option>
         </select>
         <button id="autoCountButton">Count Automatically</button>
-        <div id="countingMessage" style="display: none;"><img src="images/spinner.gif">Counting ...</div>
+        <div id="countingMessage" style="display: none;"><img src="images/spinner.gif">Counting <span id="countingProgress">0</span>% ...</div>
         <button id="filterButton" style="display: none;">Filter</button>
     </div>
 
